<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_image">News Image</string>
    <string name="news_title">News Title</string>
    <string name="this_is_a_short_description_of_the_news_article">This is a short description of the news article.</string>
    <string name="read_more">Read More</string>
    <string name="delete_article">Delete Article</string>
</resources>