<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">



        <!-- Left Aligned Image -->
        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/news_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/readMore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/newsTitle" />

        <!-- Title -->
        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:maxLines="2"
           android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/news_title"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toEndOf="@id/newsImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_article"
            android:padding="5dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/newsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/newsTitle" />

        <!-- Description -->
        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/this_is_a_short_description_of_the_news_article"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/newsTitle"
            app:layout_constraintTop_toBottomOf="@id/newsTitle" />

        <!-- Read More Button -->
        <TextView
            android:id="@+id/readMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/read_more"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/newsDescription"
            app:layout_constraintTop_toBottomOf="@id/newsDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

